src/objects/Position__c.object
<CustomObject>
    <description>This object stores information about the open job positions at our company.</description>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>ROUND(NOW()- CreatedDate,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HiringManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HiringManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ro-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>